disabled schedule on clear_cache.yml, github_actions_archs.yml, github_actions.yml and docker_actions.yml

--- a/.github/workflows/check_64_to_32.yml
+++ b/.github/workflows/check_64_to_32.yml
@@ -6,8 +6,8 @@ on:
       - .gitlab-ci.yml
   pull_request:
   release:
-  schedule:
-    - cron: '0 0 * * SUN'
+  # schedule:
+  #   - cron: '0 0 * * SUN'
   repository_dispatch:
     types: [backend_automation]
   workflow_dispatch:
